--- a/wiki/fr/TechDraw_HorizontalExtentDimension.html
+++ b/wiki/fr/TechDraw_HorizontalExtentDimension.html
@@ -71,10 +71,8 @@
 <p><span id="Change_properties"></span>
 </p>
 <h3><span id="Changer_les_propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Changer_les_propri&eacute;t&eacute;s">Changer les propri&eacute;t&eacute;s</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Pour modifier les propri&eacute;t&eacute;s d'un objet dimension, double-cliquez dessus dans le dessin ou dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>. Cela ouvrira la <a href="../fr/TechDraw_LengthDimension.html#Fen%C3%AAtre_de_dialogue_Cote" title="TechDraw LengthDimension/fr">fen&ecirc;tre de dialogue Cote</a>.
+<p>Pour modifier les propri&eacute;t&eacute;s d'un objet dimension, double-cliquez dessus dans le dessin ou dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Cela ouvrira la <a href="../fr/TechDraw_LengthDimension.html#Panneau_des_t%C3%A2ches_de_Cote" title="TechDraw LengthDimension/fr">panneau des t&acirc;ches de Cote</a>.
 </p>
-</div>
 <h2><span class="mw-headline" id="Limitations">Limitations</span></h2>
 <p>Les objets Cote sont vuln&eacute;rables au "<a href="../fr/Topological_naming_problem.html" title="Topological naming problem/fr">probl&egrave;me de nommage topologique</a>". Voir <a href="../fr/TechDraw_LengthDimension.html" title="TechDraw LengthDimension/fr">TechDraw Cote de longueur</a>.
 </p><p><span id="Notes"></span>
@@ -161,13 +159,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119204410
+Cached time: 20260119204453
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.104 seconds
-Real time usage: 0.369 seconds
-Preprocessor visited node count: 485/1000000
+CPU time usage: 0.100 seconds
+Real time usage: 0.381 seconds
+Preprocessor visited node count: 484/1000000
 Post&#8208;expand include size: 27199/2097152 bytes
 Template argument size: 11384/2097152 bytes
 Highest expansion depth: 7/100
@@ -177,19 +175,19 @@ Unstrip post&#8208;expand size: 5159/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   80.913      1 -total
- 24.81%   20.073      1 Template:TechDraw_Tools_navi/fr
- 23.08%   18.673      2 Template:Navigation_menu_2
- 13.48%   10.907      1 Template:Userdocnavi/fr
- 11.17%    9.036      1 Template:Value
-  9.99%    8.085      1 Template:PropertyData
-  6.93%    5.609      2 Template:Incode
-  5.04%    4.082      1 Template:GuiCommand/fr
-  4.40%    3.557      2 Template:Docnav/fr
-  4.30%    3.482      1 Template:Code
+100.00%  131.149      1 -total
+ 20.28%   26.598      1 Template:TechDraw_Tools_navi/fr
+ 14.88%   19.515      2 Template:Navigation_menu_2
+ 12.27%   16.090      1 Template:VersionMinus/fr
+ 12.07%   15.831      1 Template:Userdocnavi/fr
+  9.31%   12.214      1 Template:Version/fr
+  8.04%   10.545      1 Template:Properties_Title
+  7.51%    9.855      1 Template:Code
+  7.26%    9.520      3 Template:MenuCommand
+  6.71%    8.798      1 Template:PropertyData
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:161889-0!canonical and timestamp 20260119204409 and revision id 1741167. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:161889-0!canonical and timestamp 20260119204452 and revision id 1741171. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
