--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -50,7 +50,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Nov&yacute; n&aacute;&#269;rt</a>: vytvo&#345;&iacute; nov&yacute; n&aacute;&#269;rt na vybran&eacute; plo&scaron;e nebo rovin&#283;. Pokud p&#345;i spu&scaron;t&#283;n&iacute; tohoto n&aacute;stroje nen&iacute; vybr&aacute;na &#382;&aacute;dn&aacute; plocha, u&#382;ivatel je vyzv&aacute;n k v&yacute;b&#283;ru roviny z panelu &Uacute;koly. Rozhran&iacute; se pot&eacute; p&#345;epne do re&#382;imu &uacute;prav n&aacute;&#269;rt&#367; <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">pracovn&iacute; plochy Sketcher</a>.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MapSketch.svg&amp;filetimestamp=20231231201639&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MapSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MapSketch.html" title="Sketcher MapSketch">P&#345;ipojit n&aacute;&#269;rt</a>: p&#345;ipoj&iacute; n&aacute;&#269;rt ke geometrii vybran&eacute; z aktivn&iacute;ho t&#283;lesa.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_EditSketch.svg&amp;filetimestamp=20231231201543&amp;.html" class="mw-file-description"><img src="../File/Sketcher_EditSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">Upravit n&aacute;&#269;rt</a>: otev&#345;e vybran&yacute; n&aacute;&#269;rt k &uacute;prav&aacute;m.</li></ul></dd></dl>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ValidateSketch.svg&amp;filetimestamp=20231231201854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ValidateSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Validate Sketch</a>: verifies the tolerance of different points and adjusts them.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ValidateSketch.svg&amp;filetimestamp=20231231201854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ValidateSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Zkontrolovat n&aacute;&#269;rt</a>: ov&#283;&#345;uje toleranci r&#367;zn&yacute;ch bod&#367; a upravuje je.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Part_CheckGeometry.svg&amp;filetimestamp=20240712183246&amp;.html" class="mw-file-description"><img src="../File/Part_CheckGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_CheckGeometry.html" title="Part CheckGeometry">Check Geometry</a>: Checks the geometry of selected objects for errors.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubShapeBinder.svg&amp;filetimestamp=20191125191133&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubShapeBinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubShapeBinder.html" title="PartDesign SubShapeBinder">Sub-Shape Binder</a>: creates a shape binder referencing geometry from one or more parent objects.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Clone.svg&amp;filetimestamp=20171227025636&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Clone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Clone.html" title="PartDesign Clone">Clone</a>: creates a clone of the selected body.</li></ul>
@@ -183,12 +183,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119204651
+Cached time: 20260119204738
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.237 seconds
-Real time usage: 0.452 seconds
+CPU time usage: 0.215 seconds
+Real time usage: 0.417 seconds
 Preprocessor visited node count: 462/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -199,18 +199,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.317      1 -total
- 31.25%    6.974      1 Template:PartDesign_Tools_navi/cs
- 24.40%    5.445      1 Template:Userdocnavi/cs
- 17.50%    3.906      2 Template:Docnav
- 15.63%    3.489      2 Template:Navigation_menu_2
-  8.13%    1.815      5 Template:VersionPlus
-  5.54%    1.236      1 Template:TOCright
-  4.66%    1.040      1 Template:Version
-  4.54%    1.014      1 Template:MenuCommand
+100.00%   36.558      1 -total
+ 50.22%   18.358      1 Template:PartDesign_Tools_navi/cs
+ 23.73%    8.676      1 Template:Userdocnavi/cs
+  9.96%    3.640      2 Template:Navigation_menu_2
+  6.35%    2.321      2 Template:Docnav
+  6.16%    2.250      1 Template:Version
+  4.35%    1.590      1 Template:TOCright
+  4.19%    1.531      5 Template:VersionPlus
+  2.75%    1.004      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119204650 and revision id 1741179. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119204738 and revision id 1741181. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
