--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -51,7 +51,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MapSketch.svg&amp;filetimestamp=20231231201639&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MapSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MapSketch.html" title="Sketcher MapSketch">P&#345;ipojit n&aacute;&#269;rt</a>: p&#345;ipoj&iacute; n&aacute;&#269;rt ke geometrii vybran&eacute; z aktivn&iacute;ho t&#283;lesa.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_EditSketch.svg&amp;filetimestamp=20231231201543&amp;.html" class="mw-file-description"><img src="../File/Sketcher_EditSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">Upravit n&aacute;&#269;rt</a>: otev&#345;e vybran&yacute; n&aacute;&#269;rt k &uacute;prav&aacute;m.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ValidateSketch.svg&amp;filetimestamp=20231231201854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ValidateSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Zkontrolovat n&aacute;&#269;rt</a>: ov&#283;&#345;uje toleranci r&#367;zn&yacute;ch bod&#367; a upravuje je.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Part_CheckGeometry.svg&amp;filetimestamp=20240712183246&amp;.html" class="mw-file-description"><img src="../File/Part_CheckGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_CheckGeometry.html" title="Part CheckGeometry">Check Geometry</a>: Checks the geometry of selected objects for errors.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Part_CheckGeometry.svg&amp;filetimestamp=20240712183246&amp;.html" class="mw-file-description"><img src="../File/Part_CheckGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_CheckGeometry.html" title="Part CheckGeometry">Zkontrolovat geometrii</a>: Zkontroluje geometrii vybran&yacute;ch objekt&#367;, zda neobsahuje chyby.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubShapeBinder.svg&amp;filetimestamp=20191125191133&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubShapeBinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubShapeBinder.html" title="PartDesign SubShapeBinder">Sub-Shape Binder</a>: creates a shape binder referencing geometry from one or more parent objects.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Clone.svg&amp;filetimestamp=20171227025636&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Clone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Clone.html" title="PartDesign Clone">Clone</a>: creates a clone of the selected body.</li></ul>
 <h3><span class="mw-headline" id="Part_Design_Modeling_Features_toolbar">Part Design Modeling Features toolbar</span></h3>
@@ -183,12 +183,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119204738
+Cached time: 20260119204838
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.215 seconds
-Real time usage: 0.417 seconds
+CPU time usage: 0.222 seconds
+Real time usage: 0.396 seconds
 Preprocessor visited node count: 462/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -199,18 +199,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.558      1 -total
- 50.22%   18.358      1 Template:PartDesign_Tools_navi/cs
- 23.73%    8.676      1 Template:Userdocnavi/cs
-  9.96%    3.640      2 Template:Navigation_menu_2
-  6.35%    2.321      2 Template:Docnav
-  6.16%    2.250      1 Template:Version
-  4.35%    1.590      1 Template:TOCright
-  4.19%    1.531      5 Template:VersionPlus
-  2.75%    1.004      1 Template:MenuCommand
+100.00%   37.298      1 -total
+ 35.89%   13.385      1 Template:Userdocnavi/cs
+ 19.05%    7.106      1 Template:PartDesign_Tools_navi/cs
+ 14.09%    5.254      2 Template:Navigation_menu_2
+ 13.20%    4.924      2 Template:Docnav
+  8.82%    3.290      1 Template:MenuCommand
+  6.42%    2.396      1 Template:TOCright
+  5.95%    2.220      1 Template:Version
+  5.95%    2.219      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119204738 and revision id 1741181. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119204838 and revision id 1741183. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
