--- a/wiki/fr/TechDraw_VerticalExtentDimension.html
+++ b/wiki/fr/TechDraw_VerticalExtentDimension.html
@@ -62,14 +62,12 @@
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Cotes &eacute;tendues horizontale et verticale d'une surface B-spline</p>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_HorizontalExtentDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_HorizontalExtentDimension.html" title="TechDraw HorizontalExtentDimension/fr">Cote &eacute;tendue horizontale</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/fr">Cotes horizontales</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DimensionRepair.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_DimensionRepair.html" title="TechDraw DimensionRepair/fr">R&eacute;paration des cotes</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -109,15 +107,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119205058
+Cached time: 20260119205108
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.183 seconds
-Preprocessor visited node count: 327/1000000
-Post&#8208;expand include size: 25406/2097152 bytes
-Template argument size: 10099/2097152 bytes
+CPU time usage: 0.076 seconds
+Real time usage: 0.304 seconds
+Preprocessor visited node count: 326/1000000
+Post&#8208;expand include size: 25301/2097152 bytes
+Template argument size: 10029/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -125,16 +123,16 @@ Unstrip post&#8208;expand size: 1780/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.653      1 -total
- 29.30%   12.792      1 Template:TechDraw_Tools_navi/fr
- 25.43%   11.100      1 Template:Userdocnavi/fr
- 18.24%    7.963      1 Template:GuiCommand/fr
- 16.83%    7.346      2 Template:Navigation_menu_2
- 16.81%    7.337      2 Template:Docnav/fr
-  9.10%    3.974      1 Template:Caption
+100.00%   61.272      1 -total
+ 45.77%   28.043      1 Template:TechDraw_Tools_navi/fr
+ 32.71%   20.043      2 Template:Navigation_menu_2
+ 20.16%   12.351      1 Template:Userdocnavi/fr
+ 12.96%    7.939      2 Template:Docnav/fr
+ 12.63%    7.736      1 Template:GuiCommand/fr
+  6.29%    3.852      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:161868-0!canonical and timestamp 20260119205057 and revision id 1741187. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:161868-0!canonical and timestamp 20260119205108 and revision id 1741191. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
