--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -54,7 +54,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Part_CheckGeometry.svg&amp;filetimestamp=20240712183246&amp;.html" class="mw-file-description"><img src="../File/Part_CheckGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_CheckGeometry.html" title="Part CheckGeometry">Zkontrolovat geometrii</a>: Zkontroluje geometrii vybran&yacute;ch objekt&#367;, zda neobsahuje chyby.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubShapeBinder.svg&amp;filetimestamp=20191125191133&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubShapeBinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubShapeBinder.html" title="PartDesign SubShapeBinder">Po&#345;ada&#269; tvar&#367; podobjekt&#367;</a>: vytvo&#345;&iacute; tvarov&yacute; vazebn&iacute;k odkazuj&iacute;c&iacute; na geometrii jednoho nebo v&iacute;ce nad&#345;azen&yacute;ch objekt&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Clone.svg&amp;filetimestamp=20171227025636&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Clone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Clone.html" title="PartDesign Clone">Vytvo&#345;it kopii</a>: vytvo&#345;&iacute; klon vybran&eacute;ho t&#283;la.</li></ul>
-<h3><span class="mw-headline" id="Part_Design_Modeling_Features_toolbar">Part Design Modeling Features toolbar</span></h3>
+<p><span id="Part_Design_Modeling_Features_toolbar"></span>
+</p>
+<h3><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_Funkce_modelov.C3.A1n.C3.AD_n.C3.A1vrh.C5.AF_d.C3.ADl.C5.AF"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_Funkce_modelov&aacute;n&iacute;_n&aacute;vrh&#367;_d&iacute;l&#367;">N&aacute;strojov&aacute; li&scaron;ta Funkce modelov&aacute;n&iacute; n&aacute;vrh&#367; d&iacute;l&#367;</span></h3>
 <h4><span class="mw-headline" id="Additive_tools">Additive tools</span></h4>
 <p>These are tools for creating base features or adding material to an existing body.
 </p>
@@ -183,13 +185,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119205105
+Cached time: 20260119205141
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.250 seconds
-Real time usage: 1.335 seconds
-Preprocessor visited node count: 462/1000000
+CPU time usage: 0.225 seconds
+Real time usage: 0.685 seconds
+Preprocessor visited node count: 463/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -199,18 +201,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   74.268      1 -total
- 29.41%   21.842      1 Template:PartDesign_Tools_navi/cs
- 26.18%   19.447      2 Template:Navigation_menu_2
- 25.77%   19.140      1 Template:Userdocnavi/cs
- 12.87%    9.560      2 Template:Docnav
-  9.55%    7.093      1 Template:Version
-  8.32%    6.177      1 Template:TOCright
-  7.87%    5.848      5 Template:VersionPlus
-  4.93%    3.658      1 Template:MenuCommand
+100.00%   93.689      1 -total
+ 31.31%   29.333      1 Template:Userdocnavi/cs
+ 26.75%   25.064      1 Template:Version
+ 20.78%   19.469      2 Template:Navigation_menu_2
+ 13.99%   13.105      1 Template:PartDesign_Tools_navi/cs
+  6.66%    6.236      1 Template:MenuCommand
+  4.35%    4.073      2 Template:Docnav
+  3.90%    3.653      1 Template:TOCright
+  3.69%    3.457      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205104 and revision id 1741189. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205140 and revision id 1741193. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
