--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -60,7 +60,7 @@
 <p><span id="Additive_tools"></span>
 </p>
 <h4><span id="Aditivn.C3.AD_n.C3.A1stroje"></span><span class="mw-headline" id="Aditivn&iacute;_n&aacute;stroje">Aditivn&iacute; n&aacute;stroje</span></h4>
-<p>These are tools for creating base features or adding material to an existing body.
+<p>Jedn&aacute; se o n&aacute;stroje pro vytv&aacute;&#345;en&iacute; z&aacute;kladn&iacute;ch prvk&#367; nebo p&#345;id&aacute;v&aacute;n&iacute; materi&aacute;lu k existuj&iacute;c&iacute;mu tvaru.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Pad</a>: extrudes a solid from a selected sketch.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Revolution.svg&amp;filetimestamp=20170324054918&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Revolution.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Revolution.html" title="PartDesign Revolution">Revolution</a>: creates a solid by revolving a sketch around an axis. The sketch must form a closed profile.</li></ul>
@@ -187,12 +187,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119205221
+Cached time: 20260119205300
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.260 seconds
-Real time usage: 0.583 seconds
+CPU time usage: 0.248 seconds
+Real time usage: 0.807 seconds
 Preprocessor visited node count: 464/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -203,18 +203,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.643      1 -total
- 30.08%    8.616      1 Template:PartDesign_Tools_navi/cs
- 26.69%    7.644      1 Template:Userdocnavi/cs
- 14.07%    4.030      2 Template:Navigation_menu_2
- 10.79%    3.091      2 Template:Docnav
-  7.93%    2.271      1 Template:MenuCommand
-  7.35%    2.106      1 Template:Version
-  7.15%    2.047      5 Template:VersionPlus
-  6.22%    1.783      1 Template:TOCright
+100.00%   72.292      1 -total
+ 40.74%   29.451      1 Template:Userdocnavi/cs
+ 25.42%   18.373      2 Template:Navigation_menu_2
+ 17.88%   12.925      1 Template:PartDesign_Tools_navi/cs
+ 15.44%   11.165      1 Template:TOCright
+  9.24%    6.677      1 Template:Version
+  5.68%    4.108      2 Template:Docnav
+  4.39%    3.177      5 Template:VersionPlus
+  4.31%    3.119      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205221 and revision id 1741197. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205259 and revision id 1741199. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
