--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -62,7 +62,7 @@
 <h4><span id="Aditivn.C3.AD_n.C3.A1stroje"></span><span class="mw-headline" id="Aditivn&iacute;_n&aacute;stroje">Aditivn&iacute; n&aacute;stroje</span></h4>
 <p>Jedn&aacute; se o n&aacute;stroje pro vytv&aacute;&#345;en&iacute; z&aacute;kladn&iacute;ch prvk&#367; nebo p&#345;id&aacute;v&aacute;n&iacute; materi&aacute;lu k existuj&iacute;c&iacute;mu tvaru.
 </p>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Pad</a>: extrudes a solid from a selected sketch.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a>: vytla&#269;uje t&#283;leso z vybran&eacute;ho n&aacute;&#269;rtu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Revolution.svg&amp;filetimestamp=20170324054918&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Revolution.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Revolution.html" title="PartDesign Revolution">Revolution</a>: creates a solid by revolving a sketch around an axis. The sketch must form a closed profile.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveLoft.svg&amp;filetimestamp=20200118062952&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveLoft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveLoft.html" title="PartDesign AdditiveLoft">Additive Loft</a>: creates a solid by making a transition between two or more sketches.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditivePipe.svg&amp;filetimestamp=20200326013518&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditivePipe.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditivePipe.html" title="PartDesign AdditivePipe">Additive Pipe</a>: creates a solid by sweeping one or more sketches along an open or closed path.</li></ul>
@@ -187,12 +187,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119205300
+Cached time: 20260119205341
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.248 seconds
-Real time usage: 0.807 seconds
+CPU time usage: 0.226 seconds
+Real time usage: 0.690 seconds
 Preprocessor visited node count: 464/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -203,18 +203,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   72.292      1 -total
- 40.74%   29.451      1 Template:Userdocnavi/cs
- 25.42%   18.373      2 Template:Navigation_menu_2
- 17.88%   12.925      1 Template:PartDesign_Tools_navi/cs
- 15.44%   11.165      1 Template:TOCright
-  9.24%    6.677      1 Template:Version
-  5.68%    4.108      2 Template:Docnav
-  4.39%    3.177      5 Template:VersionPlus
-  4.31%    3.119      1 Template:MenuCommand
+100.00%   31.982      1 -total
+ 52.43%   16.769      1 Template:PartDesign_Tools_navi/cs
+ 18.46%    5.904      1 Template:Userdocnavi/cs
+ 10.52%    3.364      2 Template:Navigation_menu_2
+  6.94%    2.220      2 Template:Docnav
+  5.56%    1.778      1 Template:Version
+  5.33%    1.705      1 Template:MenuCommand
+  4.83%    1.546      5 Template:VersionPlus
+  3.85%    1.232      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205259 and revision id 1741199. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205340 and revision id 1741201. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
